tests/ui/closures/2229_closure_analysis/diagnostics/mut_ref.stderr
error[E0596]: cannot borrow `**ref_mref_x` as mutable, as it is behind a `&` reference
  --> $DIR/mut_ref.rs:12:13
   |
LL |     let c = || {
   |             ^^ `ref_mref_x` is a `&` reference, so the data it refers to cannot be borrowed as mutable
LL |
LL |         **ref_mref_x = y;
   |         ------------ mutable borrow occurs due to use of `**ref_mref_x` in closure
   |
help: consider changing this to be a mutable reference
   |
LL |     let ref_mref_x = &mut mref_x;
   |                       +++

error[E0596]: cannot borrow `**mref_ref_x` as mutable, as it is behind a `&` reference
  --> $DIR/mut_ref.rs:26:13
   |
LL |     let c = || {
   |             ^^ cannot borrow as mutable
LL |
LL |         **mref_ref_x = y;
   |         ------------ mutable borrow occurs due to use of `**mref_ref_x` in closure

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0596`.
